--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   </parent>
 
   <artifactId>websphere-deployer</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>hpi</packaging>
   <name>WebSphere Deployer Plugin</name>
   <inceptionYear>2013</inceptionYear>
@@ -51,6 +51,18 @@
         <classifier>jdk15</classifier>
         <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>com.ibm.ws</groupId>
+          <artifactId>admin</artifactId>
+          <version>8.5.0</version>
+          <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>com.ibm.ws</groupId>
+          <artifactId>orb</artifactId>
+          <version>8.5.0</version>
+          <scope>provided</scope>
+      </dependency>
   </dependencies>
 
 </project>
