--- a/pom.xml
+++ b/pom.xml
@@ -1,82 +1,104 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.jenkins-ci.plugins</groupId>
-    <artifactId>plugin</artifactId>
-    <version>1.509.4</version><!-- which version of Jenkins is this plugin built against? -->
-  </parent>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.jenkins-ci.plugins</groupId>
+        <artifactId>plugin</artifactId>
+        <version>1.509.4</version><!-- which version of Jenkins is this plugin built against? -->
+    </parent>
 
-  <artifactId>websphere-deployer</artifactId>
-  <version>1.2-SNAPSHOT</version>
-  <packaging>hpi</packaging>
-  <name>WebSphere Deployer Plugin</name>
-  <inceptionYear>2013</inceptionYear>
-  <url>https://wiki.jenkins-ci.org/display/JENKINS/WebSphere+Deployer+Plugin</url>
+    <artifactId>websphere-deployer</artifactId>
+    <version>1.2-SNAPSHOT</version>
+    <packaging>hpi</packaging>
+    <name>WebSphere Deployer Plugin</name>
+    <inceptionYear>2013</inceptionYear>
+    <url>https://wiki.jenkins-ci.org/display/JENKINS/WebSphere+Deployer+Plugin</url>
 
-  <description>
-      Deploys your EAR files automatically to a local or remote IBM WebSphere Application Server
-  </description>
+    <description>
+        Deploys your web artifacts locally or remotely to IBM WebSphere Application Server or IBM WebSphere Liberty Profile
+    </description>
 
-  <licenses>
-      <license>
-        <name>The MIT License</name>
-        <url>http://www.opensource.org/licenses/mit-license.php</url>
-        <distribution>repo</distribution>
-      </license>
-  </licenses>
+    <licenses>
+        <license>
+            <name>The MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
-  <developers>
-      <developer>
-          <name>Greg Peters</name>
-          <email>gregpeters00@gmail.com</email>
-          <url>drivebiz.blogspot.com</url>
-          <timezone>-5</timezone>
-          <roles>
-              <role>Lead Developer</role>
-          </roles>
-      </developer>
-  </developers>
+    <developers>
+        <developer>
+            <name>Greg Peters</name>
+            <email>gregpeters00@gmail.com</email>
+            <url>drivebiz.blogspot.com</url>
+            <timezone>-5</timezone>
+            <roles>
+                <role>Lead Developer</role>
+            </roles>
+        </developer>
+    </developers>
 
-  <scm>
-    <connection>scm:git:ssh://github.com/jenkinsci/websphere-deployer-plugin.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/jenkinsci/websphere-deployer-plugin.git</developerConnection>
-    <url>https://github.com/jenkinsci/websphere-deployer-plugin</url>
-  </scm>
+    <scm>
+        <connection>scm:git:ssh://github.com/jenkinsci/websphere-deployer-plugin.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/jenkinsci/websphere-deployer-plugin.git</developerConnection>
+        <url>https://github.com/jenkinsci/websphere-deployer-plugin</url>
+    </scm>
 
-  <dependencies>
-    <dependency>
-        <groupId>org.testng</groupId>
-        <artifactId>testng</artifactId>
-        <version>5.9</version>
-        <classifier>jdk15</classifier>
-        <scope>test</scope>
-    </dependency>
-      <dependency>
-          <groupId>com.ibm.ws</groupId>
-          <artifactId>admin</artifactId>
-          <version>8.5.0</version>
-          <scope>provided</scope>
-      </dependency>
-      <dependency>
-          <groupId>com.ibm.ws</groupId>
-          <artifactId>orb</artifactId>
-          <version>8.5.0</version>
-          <scope>provided</scope>
-      </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ibm.ws</groupId>
+            <artifactId>admin</artifactId>
+            <version>8.5.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.ibm.ws</groupId>
+            <artifactId>orb</artifactId>
+            <version>8.5.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.ibm.ws</groupId>
+            <artifactId>liberty-connector</artifactId>
+            <version>8.5.5</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.ibm.ws</groupId>
+            <artifactId>liberty-rest-connector</artifactId>
+            <version>8.5.5</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.ibm.ws</groupId>
+            <artifactId>liberty-basic</artifactId>
+            <version>8.5.5</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.ibm.ws</groupId>
+            <artifactId>liberty-endpoint</artifactId>
+            <version>8.5.5</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
-  <repositories>
-    <repository>
-      <id>repo.jenkins-ci.org</id>
-      <url>http://repo.jenkins-ci.org/public/</url>
-    </repository>
-  </repositories>
+    <repositories>
+        <repository>
+            <id>repo.jenkins-ci.org</id>
+            <url>http://repo.jenkins-ci.org/public/</url>
+        </repository>
+    </repositories>
 
-  <pluginRepositories>
-    <pluginRepository>
-      <id>repo.jenkins-ci.org</id>
-      <url>http://repo.jenkins-ci.org/public/</url>
-    </pluginRepository>
-  </pluginRepositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>repo.jenkins-ci.org</id>
+            <url>http://repo.jenkins-ci.org/public/</url>
+        </pluginRepository>
+    </pluginRepositories>
 
 </project>
