added new profile for builds

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,47 @@
     
     <profiles>
     	<profile>
+    		<id>BUILD</id>
+			<dependencies>
+		        <dependency>
+		            <groupId>com.ibm.ws</groupId>
+		            <artifactId>admin</artifactId>
+		            <version>8.5.0</version>
+		            <scope>provided</scope>
+		        </dependency>
+		        <dependency>
+		            <groupId>com.ibm.ws</groupId>
+		            <artifactId>orb</artifactId>
+		            <version>8.5.0</version>
+		            <scope>provided</scope>
+		        </dependency>
+		        <dependency>
+		            <groupId>com.ibm.ws</groupId>
+		            <artifactId>liberty-connector</artifactId>
+		            <version>8.5.5</version>
+		            <scope>provided</scope>
+		        </dependency>
+		        <dependency>
+		            <groupId>com.ibm.ws</groupId>
+		            <artifactId>liberty-rest-connector</artifactId>
+		            <version>8.5.5</version>
+		            <scope>provided</scope>
+		        </dependency>
+		        <dependency>
+		            <groupId>com.ibm.ws</groupId>
+		            <artifactId>liberty-basic</artifactId>
+		            <version>8.5.5</version>
+		            <scope>provided</scope>
+		        </dependency>
+		        <dependency>
+		            <groupId>com.ibm.ws</groupId>
+		            <artifactId>liberty-endpoint</artifactId>
+		            <version>8.5.5</version>
+		            <scope>provided</scope>
+		        </dependency> 		        
+			</dependencies>       		
+    	</profile>
+    	<profile>
     		<!-- Use this profile for testing to prevent classloader issues with the following dependencies -->
     		<id>TEST-WAS</id>
     		<activation>
