--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     </parent>
 
     <artifactId>websphere-deployer</artifactId>
-    <version>1.4.3</version>
+    <version>1.4.4-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <name>WebSphere Deployer Plugin</name>
     <inceptionYear>2013</inceptionYear>
@@ -178,7 +178,7 @@
         <connection>scm:git:ssh://github.com/jenkinsci/websphere-deployer-plugin.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/jenkinsci/websphere-deployer-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/websphere-deployer-plugin</url>
-      <tag>websphere-deployer-1.4.3</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <build>
