--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 	    <groupId>org.jenkins-ci.plugins</groupId>
 	    <artifactId>plugin</artifactId>
-	    <version>2.5</version>
+	    <version>1.608</version>
 	</parent>
 
     <artifactId>websphere-deployer</artifactId>
-    <version>1.5.7-SNAPSHOT</version>
+    <version>1.6.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <name>WebSphere Deployer Plugin</name>
     <inceptionYear>2013</inceptionYear>
@@ -22,6 +22,9 @@
     <profiles>
     	<profile>
     		<id>BUILD</id>
+    		<activation>
+    			<activeByDefault>true</activeByDefault>
+    		</activation>
 			<dependencies>
 		        <dependency>
 		            <groupId>com.ibm.ws</groupId>
@@ -32,6 +35,12 @@
 		        <dependency>
 		            <groupId>com.ibm.ws</groupId>
 		            <artifactId>orb</artifactId>
+		            <version>${was.version}</version>
+		            <scope>provided</scope>
+		        </dependency>
+		        <dependency>
+		            <groupId>com.ibm.ws</groupId>
+		            <artifactId>crypto</artifactId>
 		            <version>${was.version}</version>
 		            <scope>provided</scope>
 		        </dependency>
@@ -47,13 +56,16 @@
     	<profile>
     		<!-- Use this profile for testing to prevent classloader issues with the following dependencies -->
     		<id>TEST-WAS</id>
-    		<activation>
-    			<activeByDefault>true</activeByDefault>
-    		</activation>
 			<dependencies>
 		        <dependency>
 		            <groupId>com.ibm.ws</groupId>
 		            <artifactId>admin</artifactId>
+		            <version>${was.version}</version>
+		            <scope>compile</scope>
+		        </dependency>
+		        <dependency>
+		            <groupId>com.ibm.ws</groupId>
+		            <artifactId>crypto</artifactId>
 		            <version>${was.version}</version>
 		            <scope>compile</scope>
 		        </dependency>
@@ -133,8 +145,8 @@
     </scm>
 
     <properties>
-    	<jenkins.version>1.596.2</jenkins.version>
-    	<was.version>8.5.0</was.version>
+    	<jenkins.version>1.608</jenkins.version>
+    	<was.version>9.0</was.version>
     	<liberty.version>8.5.x.6</liberty.version>
 	</properties>
 
@@ -144,7 +156,7 @@
                 <groupId>org.jenkins-ci.tools</groupId>
                 <artifactId>maven-hpi-plugin</artifactId>
                 <configuration>
-                    <pluginFirstClassLoader>true</pluginFirstClassLoader>
+                    <pluginFirstClassLoader>false</pluginFirstClassLoader>
                 </configuration>
             </plugin>
         </plugins>
