--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 	    <groupId>org.jenkins-ci.plugins</groupId>
 	    <artifactId>plugin</artifactId>
-	    <version>1.608</version>
+	    <version>2.5</version>
 	</parent>
 
     <artifactId>websphere-deployer</artifactId>
@@ -120,6 +120,7 @@
 
     <developers>
         <developer>
+        	<id>gregp</id>
             <name>Greg Peters</name>
             <email>gregpeters00@gmail.com</email>
             <url>drivebiz.blogspot.com</url>
@@ -129,6 +130,7 @@
             </roles>
         </developer>
         <developer>
+        	<id>valeriop</id>
             <name>Valerio Ponte</name>
             <timezone>+1</timezone>
             <roles>
